almost done with requirements minus update username

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_MAPS_API_KEY=AIzaSyBiXh1__4RXiqUTwcmt_VeiqR9oAar9-4I
+RAPID_API_REAL_ESTATE_KEY=1547880da5msh516cf9307851d4ep1b9128jsned839e804a7b
